--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-  
+
   #PHP Service
   app:
     build:
       context: .
       dockerfile: Dockerfile
     image: eskcti/php
-    container_name: app
+    container_name: agenda-app
     restart: unless-stopped
     tty: true
     environment:
@@ -23,7 +23,7 @@ services:
   #Nginx Service
   webserver:
     image: nginx:alpine
-    container_name: webserver
+    container_name: agenda-webserver
     restart: unless-stopped
     tty: true
     ports:
@@ -36,16 +36,18 @@ services:
       - app-network
 
   #MySQL Service
-  db:
-    image: mysql:8.0
-    container_name: db
+  mysql:
+    image: mysql:8.0.35
+    container_name: agenda-db
     restart: unless-stopped
     tty: true
     ports:
       - "3361:3306"
     environment:
-      MYSQL_DATABASE: agenda_db
-      MYSQL_ROOT_PASSWORD: root1234
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${DB_USERNAME}
       SERVICE_TAGS: dev
       SERVICE_NAME: mysql
     volumes:
